adding unit tets and fixed methods for entities